[tool.poetry]
name = "flasktutorial"
version = "0.1.0"
description = "A tutorial project for Flask"
authors = ["Adam Sangwin-Remesnik <adam.remesnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
